# src/app/authentication/docs/swagger.json
@@ -118,33 +118,33 @@
                 "confirmPassword": {
                     "type": "string",
                     "minLength": 8,
-                    "example": "Secure@123"
+                    "example": "Sakshi@123"
                 },
                 "email": {
                     "type": "string",
-                    "example": "arijit@gmail.com"
+                    "example": "sakshi@gmail.com"
                 },
                 "panCard": {
                     "type": "string",
-                    "example": "EQZRP1234P"
+                    "example": "ABCDE1234S"
                 },
                 "password": {
                     "type": "string",
                     "maxLength": 20,
                     "minLength": 8,
-                    "example": "Secure@123"
+                    "example": "Sakshi@123"
                 },
                 "phoneNumber": {
                     "type": "integer",
                     "maximum": 9999999999,
                     "minimum": 1000000000,
-                    "example": 7568912340
+                    "example": 9876543210
                 },
                 "username": {
                     "type": "string",
                     "maxLength": 32,
                     "minLength": 5,
-                    "example": "Arijit"
+                    "example": "Sakshi"
                 }
             }
         },
@@ -159,13 +159,13 @@
                     "type": "string",
                     "maxLength": 20,
                     "minLength": 8,
-                    "example": "Secure@123"
+                    "example": "Sakshi@123"
                 },
                 "username": {
                     "type": "string",
                     "maxLength": 32,
                     "minLength": 5,
-                    "example": "Arijit"
+                    "example": "Sakshi"
                 }
             }
         },
@@ -176,13 +176,13 @@
                     "type": "string",
                     "example": "user logged in successfully"
                 },
-                "otpExpiresAt": {
-                    "type": "integer",
-                    "format": "int32"
+                "otpexpiresat": {
+                    "type": "string",
+                    "example": "otp expires in 2 minutes"
                 },
-                "otpSent": {
-                    "type": "integer",
-                    "format": "int32"
+                "otpsent": {
+                    "type": "string",
+                    "example": "otp generated successfully"
                 }
             }
         },
