# src/app/authentication/models/signinModel.go
@@ -1,12 +1,12 @@
 package models
 
-type BFFSigninUserRequest struct{
-	Username        string `json:"username" example:"Arijit" validate:"required,min=5,max=32"`
-	Password        string `json:"password" example:"Secure@123" validate:"required,min=8,strongPassword,max=20"`
+type BFFSigninUserRequest struct {
+	Username string `json:"username" example:"Sakshi" validate:"required,min=5,max=32"`
+	Password string `json:"password" example:"Sakshi@123" validate:"required,min=8,strongPassword,max=20"`
 }
 
 type BFFSigninUserResponse struct {
-	Message string `json:"message" example:"user logged in successfully"`
-	OtpSent uint8
-	OtpExpiresAt uint8 
+	Message      string `json:"message" example:"user logged in successfully"`
+	OtpSent      string `json:"otpsent" example:"otp generated successfully"`
+	OtpExpiresAt string `json:"otpexpiresat" example:"otp expires in 2 minutes"`
 }
